# covesa-ifex-core

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh  check_status.sh  generate_proto.sh  install_deps.sh  start-all-bg.sh  start-gui.sh  stop_services.sh
core/: CMakeLists.txt
core/cmake/: ifex-core-config.cmake.in
core/include/ifex/: discovery.hpp  ifex.hpp  network.hpp  parser.hpp  types.hpp
core/src/: discovery_client_impl.cpp  discovery_client_impl.hpp  network_utils.cpp  parser_impl.cpp
docs/: core-services-spec.md  ifex-service-architecture.md  orchestrator-service-design.md  vision-dynamic-vehicle-orchestration.md  vss-ifex-relationship.md
proto/: backend-transport-service.proto  beverage-service.proto  climate-comfort-service.proto  defrost-service.proto  departure-orchestration-service.proto  echo_service.proto  ifex-dispatcher-service.proto  ifex-scheduler-service.proto  service-discovery-service.proto  settings-service.proto  test-types-service.proto
reference-services/: CMakeLists.txt
reference-services/backend-transport/: CMakeLists.txt  README.md
reference-services/backend-transport/client/include/: backend_transport_client.hpp
reference-services/backend-transport/client/src/: backend_transport_client.cpp
reference-services/backend-transport/include/: backend_transport_server.hpp  message_queue.hpp  mqtt_client.hpp
reference-services/backend-transport/src/: backend_transport_server.cpp  main.cpp  message_queue.cpp  mqtt_client.cpp
reference-services/backend-transport/tests/: backend_transport_client_test.cpp  backend_transport_conformance_test.cpp  backend_transport_integration_test.cpp  backend_transport_resilience_test.cpp  mqtt_test_fixture.hpp
reference-services/discovery/: CMakeLists.txt
reference-services/discovery/include/: discovery_server.hpp
reference-services/discovery/src/: discovery_server.cpp  main.cpp
reference-services/dispatcher/: CMakeLists.txt
reference-services/dispatcher/include/: dispatcher_server.hpp
reference-services/dispatcher/src/: dispatcher_server.cpp  dynamic_caller.hpp  dynamic_caller_impl.cpp  main.cpp
reference-services/ifex/: backend-transport-service.yml  ifex-dispatcher-service.yml  ifex-scheduler-service.yml  service-discovery-service.yml
reference-services/scheduler/: CMakeLists.txt  ifex_scheduler_proxy.py
reference-services/scheduler/gui/: scheduler_calendar_gui.html  scheduler_live_gui.html
reference-services/scheduler/include/: scheduler_server.hpp
reference-services/scheduler/src/: main.cpp  scheduler_server.cpp
templates/protobuf/: AST_protobuf.tpl
test-client/: CMakeLists.txt  dispatcher_client.cpp  test_client.cpp
test-gui/: ifex_explorer_gui.html  ifex_explorer_proxy.py  requirements.txt  run_explorer.sh
test-services/: CMakeLists.txt
test-services/beverage/: CMakeLists.txt  beverage-service.ifex.yml
test-services/beverage/include/: beverage_server.hpp
test-services/beverage/src/: beverage_server.cpp  main.cpp
test-services/climate-comfort/: CMakeLists.txt  climate-comfort-service.ifex.yml
test-services/climate-comfort/include/: climate_comfort_server.hpp
test-services/climate-comfort/src/: climate_comfort_server.cpp  main.cpp
test-services/defrost/: CMakeLists.txt  defrost-service.ifex.yml
test-services/defrost/include/: defrost_server.hpp
test-services/defrost/src/: defrost_server.cpp  main.cpp
test-services/departure-orchestration/: CMakeLists.txt  departure-orchestration-service.ifex.yml  example-departure-timeline.md
test-services/departure-orchestration/include/: departure_orchestration_server.hpp
test-services/departure-orchestration/src/: departure_orchestration_server.cpp  main.cpp
test-services/echo/: echo_service.ifex.yml
test-services/echo/include/: echo_server.hpp
test-services/echo/src/: echo_server.cpp  main.cpp
test-services/settings/: CMakeLists.txt  main.cpp  settings-service.ifex.yml  settings_server.cpp  settings_server.hpp
test-services/test-types/: CMakeLists.txt  main.cpp  test-types-service.ifex.yml  test_types_server.cpp  test_types_server.hpp
tests/: CMakeLists.txt
tests/integration/: test_comprehensive.cpp  test_discovery.cpp  test_dispatcher.cpp  test_fixture.cpp  test_fixture.hpp  test_full_chain.cpp  test_main.cpp  test_scheduler.cpp  test_types_comprehensive.cpp
tests/unit/: test_main.cpp  test_namespace_parsing.cpp  test_parser.cpp  test_settings_serialization.cpp
